feat: add windows config to .gitconfig

--- a/.gitconfig
+++ b/.gitconfig
@@ -5,3 +5,4 @@ email = <E-Mail>
 	defaultBranch = main
 [core]
 	editor = nano
+	#editor = 'C:/Program Files/Notepad++/notepad++.exe' -multiInst -notabbar -nosession -noPlugin
